adding shared module (avoiding duplicate components)
