# src/app/services/models.ts
@@ -10,7 +10,9 @@ export type { CategorySummaryDto } from './models/category-summary-dto';
 export type { DashboardResponseDto } from './models/dashboard-response-dto';
 export type { PageResponseBudgetPlanDto } from './models/page-response-budget-plan-dto';
 export type { PageResponseTransactionDto } from './models/page-response-transaction-dto';
+export type { ProfileResponse } from './models/profile-response';
 export type { RegistrationRequest } from './models/registration-request';
 export type { TransactionComparisonDto } from './models/transaction-comparison-dto';
 export type { TransactionDto } from './models/transaction-dto';
+export type { UpdatePasswordRequest } from './models/update-password-request';
 export type { UpdateTransactionDto } from './models/update-transaction-dto';
