# src/app/services/models/profile-response.ts
@@ -1,0 +1,9 @@
+/* tslint:disable */
+/* eslint-disable */
+/* Code generated by ng-openapi-gen DO NOT EDIT. */
+
+export interface ProfileResponse {
+  email?: string;
+  firstname?: string;
+  lastname?: string;
+}
