# src/app/services/models/update-password-request.ts
@@ -1,0 +1,8 @@
+/* tslint:disable */
+/* eslint-disable */
+/* Code generated by ng-openapi-gen DO NOT EDIT. */
+
+export interface UpdatePasswordRequest {
+  newPassword?: string;
+  oldPassword?: string;
+}
